# buildflow

AiBuildCoach-1/: main.py  pyproject.toml  replit.md  requirements.txt
AiBuildCoach-1/attached_assets/: Pasted-Build-the-Competitor-AI-module-structure-ONLY-No-OpenAI-usage-no-AI-calls-just-placeholders-to--1764260295792_1764260295792.txt  Pasted-FINAL-SYSTEM-UPGRADE-Optimize-the-entire-AI-Build-Coach-by-adding-a-unified-AI-orchestration-wrappe-1764263068541_1764263068541.txt  Pasted-Fix-all-issues-in-my-AI-Build-Coach-project-with-the-following-requirements-1-Fix-UX-AI-Module--1764265886690_1764265886691.txt  Pasted-I-want-to-build-a-modular-web-service-called-AI-Build-Coach-WHAT-THIS-WEB-SERVICE-DOES-FO-1764253228856_1764253228856.txt  Pasted-Improve-the-Build-Flow-module-to-become-an-advanced-child-friendly-step-by-step-product-building-s-1764272883171_1764272883172.txt  Pasted-Integrate-all-modules-into-a-unified-workflow-inside-the-AI-Build-Coach-Create-a-full-Idea-Build-1764268216064_1764268216065.txt  Pasted-Let-s-accelerate-the-build-Combine-the-next-three-features-into-one-step-A3-interaction-testin-1764255713907_1764255713908.txt  Pasted-Update-the-Build-Flow-Planner-AI-so-it-produces-a-SINGLE-expert-but-child-friendly-mode-Goal--1764278399694_1764278399694.txt  Pasted-Update-the-Build-Flow-module-with-the-following-rules-Your-ONLY-output-must-be-valid-JSON-Do-N-1764273581589_1764273581590.txt  Pasted-Upgrade-my-project-to-use-the-most-advanced-OpenAI-model-by-default-and-make-it-easy-to-customize-p-1764269574865_1764269574865.txt  (+4 more)
(+21 files in other folders)
