[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "fastapi>=0.122.0",
    "httpx>=0.28.1",
    "openai>=2.8.1",
    "playwright>=1.56.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.38.0",
]
